# ficwright

./: .gitignore  Cargo.toml  untitled.md  untitled.toml  untitled2.toml
src/: command.rs  config.rs  driver.rs  login.rs  logout.rs  look.rs  main.rs  post_new.rs  template.rs  utils.rs
src/command/: demo_post_new.rs  login.rs  look.rs  mod.rs  post_new.rs  template.rs
src/forms/: associations_form.rs  mod.rs  model.rs  preface_form.rs  tags_form.rs  work_form.rs
